[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/LevelHollowgrove/Crow/StaticCrow.gd" type="Script" id=1]
[ext_resource path="res://Entities/LevelHollowgrove/Crow/Crow.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Levels/HollowGrove/Crow1.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Levels/HollowGrove/Crow2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Levels/HollowGrove/Crow3.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=3]
resource_name = "FlyAway"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 10, 11, 10, 11, 12, 13, 14, 12, 13, 14, 12, 13, 14, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1, 1.4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 19.4454, -13.0815 ), Vector2( 96.1017, -81.4936 ), Vector2( 184.103, -168.306 ), Vector2( 1241.31, -1066.77 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -15.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 5, 6, 5, 6, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_caw"
}, {
"args": [  ],
"method": "_pass"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle2"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 2, 4, 2, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_passagain"
} ]
}

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.67032, 234.975 )

[node name="StaticCrow" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4
frame = 8

[node name="Caw" type="AudioStreamPlayer2D" parent="Sprite"]
stream = ExtResource( 3 )
max_distance = 1000.0
attenuation = 3.73213
bus = "SFX"

[node name="Caw2" type="AudioStreamPlayer2D" parent="Sprite"]
stream = ExtResource( 4 )
max_distance = 1000.0
attenuation = 3.73213
bus = "SFX"

[node name="Caw3" type="AudioStreamPlayer2D" parent="Sprite"]
stream = ExtResource( 5 )
max_distance = 1000.0
attenuation = 3.73213
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/FlyAway = SubResource( 3 )
anims/Idle = SubResource( 1 )
anims/Idle2 = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )
disabled = true

[node name="RayCast2D" type="Area2D" parent="."]
position = Vector2( -345.019, -172.396 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D"]
position = Vector2( 0.567474, 0.589966 )
shape = SubResource( 5 )

[node name="Queuefree" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="RayCast2D" to="." method="_on_RayCast2D_body_entered"]
[connection signal="timeout" from="Queuefree" to="." method="_on_Queuefree_timeout"]
